--- a/tarjetas-colores-react/src/componentes/CartaColor/CartaColor.css
+++ b/tarjetas-colores-react/src/componentes/CartaColor/CartaColor.css
@@ -4,9 +4,9 @@
     width: 250px;
     height: 300px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
-    gap: 20px
+    gap: 8px
 }
 
 
