--- a/tarjetas-colores-react/src/global.css
+++ b/tarjetas-colores-react/src/global.css
@@ -6,7 +6,7 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+/*
 .seccion-tarjetas{
     width: 250px;
     height: 300px;
@@ -15,3 +15,4 @@
     flex-wrap: nowrap;
     gap: 20px
 }
+*/
