--- a/react-proyecto/src/componentes/ListaChat/ListaChat.css
+++ b/react-proyecto/src/componentes/ListaChat/ListaChat.css
@@ -1,13 +1,9 @@
 .contenedor-padre{
-    background-color: black;
-    background-image: url('../img/fondowsp.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
     height: 100vh;
     width: 100vw;
-    margin: 0;
+    margin-top: 70px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-left: 5px;
 }
