--- a/react-proyecto/src/componentes/Mensajes/Mensajes.css
+++ b/react-proyecto/src/componentes/Mensajes/Mensajes.css
@@ -4,9 +4,9 @@
 .contenedor-mensaje .contenedor-mensaje-otro{
     width: 70%;
     background-color: #424445; 
-    margin-left: 10px;  
     border-radius: 10px;
     padding: 7px;
+    margin: 0 0 0 7px;
 }
 
 .contenedor-mensaje .contenedor-mensaje-otro .autor{
@@ -17,9 +17,9 @@
 .contenedor-mensaje .mensaje-yo{
     width: 70%;
     background-color:#144d37;
-    margin-left: 25%;
     border-radius: 10px;
     padding: 7px;
+    margin-left: 25%;
 }
 
 .contenedor-mensaje .mensaje-yo .autor{
@@ -31,11 +31,13 @@
     display: flex;
     flex-direction: row;
     justify-content: end;
+    align-items: center;
     font-size: 12px;
     color: #888787;
+    gap: 3px;
 }
 
-.contenedor-mensaje .contenedor-estado .estadoVisto{
+.contenedor-mensaje .contenedor-estado .estadoVisto svg{
     color: #007bfc;
 }
 
