--- a/react-proyecto/src/style.css
+++ b/react-proyecto/src/style.css
@@ -1,6 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+
 *{
     margin: 0;
     padding: 0;
@@ -8,3 +9,22 @@
     font-family: Helvetica, sans-serif;
 }
 
+html{
+    background-color: black;
+    background-image: url('./componentes/img/fondowsp.jpg');
+    background-repeat: repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+html .contenedor-footer{
+    position: fixed;
+    bottom: 0; 
+    z-index: 1000;
+}
+
+html .contenedor-header{
+    position: fixed;
+    top: 0; 
+    z-index: 1000;
+}
