--- a/proyecto-frontend/src/Componentes/FooterHomeContactos/FooterHomeContactos.css
+++ b/proyecto-frontend/src/Componentes/FooterHomeContactos/FooterHomeContactos.css
@@ -25,11 +25,11 @@
 }
 
 .footer-home .contenedor-botones button{
-    color: #F0E040;
+    color: #ece378;
 }
 
 .footer-home .contenedor-botones button svg{
-    color: #F0E040;
+    color:#ece378 ;
 }
 
 .footer-home span{
