--- a/proyecto-frontend/src/Componentes/FooterChat/FooterChat.css
+++ b/proyecto-frontend/src/Componentes/FooterChat/FooterChat.css
@@ -53,7 +53,7 @@ input:focus {
 .contenedor-footer .btn-enviar {
     width: 50px;
     height: 50px;
-    background-color:  #F0E040;
+    background-color: #ece378 ;
     border-radius: 50%;
     display: flex;
     align-items: center;
