--- a/proyecto-frontend/src/Componentes/HeaderHomeContactos/HeaderHomeContactos.css
+++ b/proyecto-frontend/src/Componentes/HeaderHomeContactos/HeaderHomeContactos.css
@@ -26,7 +26,7 @@
 }
 
 .contenedor-header-home .contenedor-icons button svg{
-    color:#F0E040 ;
+    color:#ece378 ;
 }
 
 .contenedor-header-home .nombre-app {
@@ -37,9 +37,9 @@
 }
 
 .contenedor-header-home .input-buscador {
-    background-color: #F0E040;
+    background-color: #ece378;
     width: 100%;
-    height: 40px;
+    height: 35px;
     border-radius: 30px;
     display: flex;
     justify-content: center;
@@ -56,3 +56,22 @@
     padding: 0 10px;
     color: rgb(15, 15, 15);
 }
+/*--------------------------------------------------------------------------------------------------------------
+.resultados-buscador {
+    margin-top: 60px; 
+}
+
+.resultados-buscador ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.resultados-buscador li {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+}
+*/
