--- a/proyecto-frontend/src/Componentes/FooterChat/FooterChat.css
+++ b/proyecto-frontend/src/Componentes/FooterChat/FooterChat.css
@@ -10,6 +10,11 @@
     justify-content: space-around;
     margin: 5px;
     margin-top: 0;
+    background-color: black;
+    background-image: url('../../../public/imagenes/fondo.jpg');
+    background-repeat: repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .contenedor-footer .contenedor-izquierda {
