--- a/proyecto-frontend/src/Componentes/ListaContactos/ListaContactos.css
+++ b/proyecto-frontend/src/Componentes/ListaContactos/ListaContactos.css
@@ -4,10 +4,10 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
-    background-color: #0a1014;
     padding: 8px;
+    padding-top: 20px;
     gap: 15px;
     overflow: hidden;
-    margin-top: 115px;
-    margin-bottom: 10%
+    margin-top: 125px;
+    margin-bottom: 50px;
 }
