--- a/proyecto-frontend/src/Componentes/ListaContactos/ListaContactos.css
+++ b/proyecto-frontend/src/Componentes/ListaContactos/ListaContactos.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
+    overflow-y: auto;
     padding: 8px;
     padding-top: 20px;
     gap: 15px;
