--- a/proyecto-frontend/src/Componentes/FooterChat/FooterChat.css
+++ b/proyecto-frontend/src/Componentes/FooterChat/FooterChat.css
@@ -11,7 +11,7 @@
     margin: 5px;
     margin-top: 0;
     background-color: black;
-    background-image: url('../../../public/imagenes/fondo.jpg');
+    background-image: url('../../../public/imagenes/estrellas.jpg');
     background-repeat: repeat;
     background-position: center;
     background-size: cover;
