--- a/proyecto-frontend/src/global.css
+++ b/proyecto-frontend/src/global.css
@@ -1,31 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 @font-face {
-    font-family: 'StarWarsFont'; 
+    font-family: 'StarWarsFont';
     src: url('./fonts/Star%20Wars.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-@media screen and (min-width: 650px){
-    /* HEADER - CHAT */
-    .flex-info-contacto{
-        width: 85%;
+@media screen and (min-width: 650px) {
+
+    /* HOME */
+    .cont-img img {
+        width: 70px;
+        height: 70px;
     }
+
+    .cont-img {
+        margin-right: 15px;
+    }
+
+    .nombre-contacto {
+        font-size: 18px;
+    }
+
+    .ultimo-mensaje {
+        font-size: 16px;
+    }
+
+    /* PAGE CHAT*/
     .contenedor-header .contenedor-nav {
         height: 100px;
     }
-    .contenedor-header .contenedor-nav .contenedor-izquierda{
+
+    .contenedor-header .contenedor-nav .contenedor-izquierda {
         width: 70%;
     }
-    .contenedor-header .contenedor-nav .contenedor-izquierda .nombre{
+
+    .contenedor-header .contenedor-nav .contenedor-izquierda .nombre {
         gap: 30px;
         white-space: nowrap;
         /* muestra el texto sin saltos de linea */
@@ -38,17 +57,25 @@
         font-size: 20px;
         color: #ece378;
     }
+
     .contenedor-header .contenedor-nav .contenedor-izquierda .contenedor-img {
         width: 80px;
         height: 80px;
     }
+
     .contenedor-header .contenedor-nav .contenedor-derecha {
         gap: 30px;
     }
+
     svg {
         font-size: 1.7rem;
     }
-    .contenedor-header .contenedor-nav .contenedor-izquierda .flecha svg{
+
+    .contenedor-header .contenedor-nav .contenedor-izquierda .flecha svg {
+        font-size: 2.5rem;
+    }
+
+    .flecha-volver svg {
         font-size: 2.5rem;
     }
 
@@ -57,67 +84,107 @@
     .contenedor-footer .contenedor-izquierda {
         height: 70px;
     }
+
     .contenedor-footer .contenedor-izquierda svg {
         font-size: 1.7rem;
     }
+
     .contenedor-footer .btn-enviar {
         width: 70px;
         height: 70px;
     }
+
     .contenedor-footer .btn-enviar svg {
         font-size: 1.8rem;
     }
 
     /* LISTA MENSAJES */
 
-    .contenedor-lista-mensajes{
+    .contenedor-lista-mensajes {
         margin-top: 100px;
     }
-    .contenedor-mensaje .mensaje-yo{
+
+    .contenedor-mensaje .mensaje-yo {
         margin-left: 29%;
     }
 }
 
-@media screen and (min-width: 1050px){
+@media screen and (min-width: 1050px) {
     .contenedor-header-home .nombre-app {
         font-size: 30px;
         padding-left: 20px;
     }
+
     .contenedor-header-home .input-buscador {
-        background-color: #3a3b3b;
+        background-color: #242626;
         height: 45px;
         padding: 0 20px;
     }
+
     /* CONTACTOS */
     .contacto-link {
         gap: 20px;
     }
-    .cont-contacto{
+
+    .cont-contacto {
         padding: 7px;
     }
-    .cont-contacto .cont-img{
-        width: 90px;
-        height: 90px;
+
+    .cont-img img {
+        width: 80px;
+        height: 80px;
     }
-    .flex-info-contacto{
-        width: 85%;
+
+    .flex-info-contacto {
+        width: 90%;
         align-items: space-between;
     }
-    .cont-contacto .info-contacto .nombre-contacto{
+
+    .cont-contacto .info-contacto .nombre-contacto {
         font-size: 1.3rem;
     }
-    .cont-contacto .info-contacto .ultima-conexion{
+
+    .cont-contacto .info-contacto .ultima-conexion {
         color: #a3a3a3;
         font-size: 1rem;
     }
+
     .cont-contacto .ultimo-mensaje {
-        width: 90%;
-        color: #aaaaaa;
         padding-top: 20px;
         font-size: 1.2rem;
     }
+
     .cont-contactos {
         margin-top: 150px;
         margin-bottom: 200px;
+    }
+
+    .cont-contactos {
+        height: 100vh;
+        /* O cualquier altura deseada */
+        overflow-y: auto;
+        /* Permite el scroll vertical */
+        padding: 10px;
+        padding-top: 20px;
+    }
+
+    .footer-home .contenedor-botones {
+        justify-content: space-around;
+    }
+
+    .contenedor-mensaje {
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+
+    .contenedor-lista-mensajes {
+        gap: 15px;
+    }
+
+    .contenedor-header-home nav {
+        background-image: url('../../../public/imagenes/stars.jpg');
+        background-repeat: repeat;
+        background-position: center;
+        background-size: cover;
     }
 }
