--- a/proyecto-frontend/src/Componentes/FooterHomeContactos/FooterHomeContactos.css
+++ b/proyecto-frontend/src/Componentes/FooterHomeContactos/FooterHomeContactos.css
@@ -1,6 +1,7 @@
 .footer-home{
     background-color: #242626;
     width: 100%;
+    height: 100px;
     color: white;
     font-size: 19px;
     padding: 10px;
@@ -20,7 +21,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 10px;
-    margin: 10px;
+    margin: 20px;
     width: 100%;
 }
 
