--- a/proyecto-frontend/src/Componentes/HeaderHomeContactos/HeaderHomeContactos.css
+++ b/proyecto-frontend/src/Componentes/HeaderHomeContactos/HeaderHomeContactos.css
@@ -8,6 +8,11 @@
     position: fixed;
     top: 0;
     z-index: 1000;
+    background-color: black;
+    background-image: url('../../../public/imagenes/stars.jpg');
+    background-repeat: repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .contenedor-header-home .flex-superior {
