--- a/proyecto-frontend/src/Componentes/Mensajes/Mensajes.css
+++ b/proyecto-frontend/src/Componentes/Mensajes/Mensajes.css
@@ -17,7 +17,7 @@
 
 .contenedor-mensaje .mensaje-yo{
     width: 70%;
-    background-color:#887011;
+    background-color:#75610f;
     border-radius: 10px;
     padding: 7px;
     margin-left: 25%;
