--- a/proyecto-frontend/src/Pages/Chat/Chat.css
+++ b/proyecto-frontend/src/Pages/Chat/Chat.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: space-between;
     background-color: black;
-    background-image: url('../../../public/imagenes/fondo.jpg');
+    background-image: url('../../../public/imagenes/estrellas.jpg');
     background-repeat: repeat;
     background-position: center;
     background-size: cover;
