--- a/proyecto-frontend/src/Componentes/HeaderChat/HeaderChat.css
+++ b/proyecto-frontend/src/Componentes/HeaderChat/HeaderChat.css
@@ -43,6 +43,7 @@
     /* Muestra '...' al final si el texto es muy largo */
     width: 50%;
     padding-left: 10px;
+    text-transform: lowercase;
 }
 
 /* IMAGEN */
